--- a/ReactiveServices/MessageBus/Tests/Dependencies.config
+++ b/ReactiveServices/MessageBus/Tests/Dependencies.config
@@ -5,21 +5,23 @@
     <section name="DependencyInjections" type="ReactiveServices.Configuration.ConfigurationSections.DependencyInjectionsSection, ReactiveServices.Configuration"/>
   </configSections>
   <ReferenceAssemblies>
-    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus, Version=0.2.*, Culture=neutral, PublicKeyToken=null" />
-    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus.InSingleProcessMemory, Version=0.2.*, Culture=neutral, PublicKeyToken=null" />
+    <ReferenceAssembly AssemblyName="ReactiveServices.Authorization, Version=0.3.*, Culture=neutral, PublicKeyToken=null" />
+    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus, Version=0.3.*, Culture=neutral, PublicKeyToken=null" />
+    <ReferenceAssembly AssemblyName="ReactiveServices.MessageBus.RabbitMQ, Version=0.3.*, Culture=neutral, PublicKeyToken=null" />
   </ReferenceAssemblies>
   <DependencyInjections>
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.ISubscriptionBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemorySubscriptionBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IPublishingBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryPublishingBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IRequestBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryRequestBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IResponseBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryResponseBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.ISendingBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemorySendingBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IReceivingBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryReceivingBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedSubscriptionBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryAuthorizedSubscriptionBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedPublishingBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryAuthorizedPublishingBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedRequestBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryAuthorizedRequestBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedResponseBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryAuthorizedResponseBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedSendingBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryAuthorizedSendingBus" />
-    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedReceivingBus" ConcreteType="ReactiveServices.MessageBus.InSingleProcessMemory.InSingleProcessMemoryAuthorizedReceivingBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IMessageSerializer" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQJsonSerializer" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.ISubscriptionBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQSubscriptionBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IPublishingBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQPublishingBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IRequestBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQRequestBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IResponseBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQResponseBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.ISendingBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQSendingBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IReceivingBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQReceivingBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedSubscriptionBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQAuthorizedSubscriptionBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedPublishingBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQAuthorizedPublishingBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedRequestBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQAuthorizedRequestBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedResponseBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQAuthorizedResponseBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedSendingBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQAuthorizedSendingBus" />
+    <DependencyInjection AbstractType="ReactiveServices.MessageBus.IAuthorizedReceivingBus" ConcreteType="ReactiveServices.MessageBus.RabbitMQ.RabbitMQAuthorizedReceivingBus" />
   </DependencyInjections>
 </configuration>
