--- a/ReactiveServices/MessageBus/RabbitMQ/packages.config
+++ b/ReactiveServices/MessageBus/RabbitMQ/packages.config
@@ -6,5 +6,8 @@
   <package id="PostSharp.Patterns.Diagnostics" version="4.1.21" targetFramework="net451" />
   <package id="PostSharp.Patterns.Diagnostics.NLog" version="4.1.21" targetFramework="net451" />
   <package id="RabbitMQ.Client" version="3.5.4" targetFramework="net451" />
+  <package id="ReactiveServices.Authorization" version="0.3.4.0" targetFramework="net451" />
+  <package id="ReactiveServices.MessageBus" version="0.3.29" targetFramework="net451" />
+  <package id="SimpleInjector" version="2.8.3" targetFramework="net451" />
   <package id="Sprache" version="2.0.0.46" targetFramework="net451" />
 </packages>
