--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,11 +1,13 @@
-version: 0.2.{build}
+version: 0.3.{build}
 configuration: Release
 platform: Any CPU
 cache: ReactiveServices/packages
 before_build:
-- nuget restore ReactiveServices/ReactiveServices.MessageBus.sln
+- nuget restore ReactiveServices/ReactiveServices.MessageBus.RabbitMQ.sln
+after_build:
+- nuget pack ReactiveServices/MessageBus/RabbitMQ/ReactiveServices.MessageBus.RabbitMQ.csproj -IncludeReferencedProjects -Properties Configuration=Release -Properties Platform=AnyCPU
 build:
-  project: ReactiveServices/ReactiveServices.MessageBus.sln
+  project: ReactiveServices/ReactiveServices.MessageBus.RabbitMQ.sln
   verbosity: minimal
 environment:
   RABBITMQ_HOSTNAME: owl.rmq.cloudamqp.com
@@ -22,5 +24,14 @@ test:
       - load
 assembly_info:
   patch: true
-  file: ReactiveServices\MessageBus\Properties\AssemblyInfo.cs
+  file: ReactiveServices\MessageBus\RabbitMQ\Properties\AssemblyInfo.cs
+  assembly_file_version: '{version}'
+  assembly_version: '{version}'
   assembly_informational_version: '{version}'
+artifacts:
+  - path: ReactiveServices.MessageBus.RabbitMQ.*.nupkg
+deploy:
+- provider: NuGet
+  api_key:
+    secure: f16K1osClAxbT+GmqxPPFj//CRk7rOFm4XtRVJkGTqnvfQwR30LPgTidxUSzRLyd
+  skip_symbols: true
