--- a/ReactiveServices/MessageBus/RabbitMQ/ReactiveServices.MessageBus.RabbitMQ.nuspec
+++ b/ReactiveServices/MessageBus/RabbitMQ/ReactiveServices.MessageBus.RabbitMQ.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <version>0.2.6</version>
-    <releaseNotes>0.2.6</releaseNotes>
+    <version>$version$</version>
+    <releaseNotes>Reactive Services v$version$</releaseNotes>
     <id>$title$</id>
     <authors>$author$</authors>
     <owners>$author$</owners>
