--- a/ReactiveServices/MessageBus/Tests/App.config
+++ b/ReactiveServices/MessageBus/Tests/App.config
@@ -17,7 +17,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="PostSharp" publicKeyToken="b13fd38b8f9c99d7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.21.0" newVersion="4.1.21.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.27.0" newVersion="4.1.27.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="SimpleInjector" publicKeyToken="984cb50dea722e99" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="3.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
